postcss/testData/inspections/media/incorrectMediaRange.pcss
@media (200<error descr="Unknown media feature 'px'">px</error> <<error descr="an identifier expected"> </error><= 400px){}